--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "gulp": "gulp",
-    "npm_pack": "cd dist && npm pack",
+    "npm_pack": "cd dist/ionic-selectable && npm pack && mv *.tgz ../../",
     "package": "npm run build_lib && npm run npm_pack",
     "publish": "npm run package && cd dist && npm publish"
   }
