--- a/projects/ionic-selectable/package.json
+++ b/projects/ionic-selectable/package.json
@@ -32,8 +32,7 @@
     "types": "ionic-selectable.d.ts",
     "peerDependencies": {
         "@ionic/angular": ">=5.0.0",
-        "@angular/common": "^14.2.0",
-        "@angular/core": "^14.2.0",
-        "ng-packagr": "^14.2.1"
+        "@angular/common": ">=11.0.0",
+        "@angular/core": ">=11.0.0"
     }
 }
