--- a/projects/ionic-selectable/package.json
+++ b/projects/ionic-selectable/package.json
@@ -33,5 +33,8 @@
         "@ionic/angular": ">=7.0.0",
         "@angular/common": ">=16.0.0",
         "@angular/core": ">=16.0.0"
+    },
+    "scripts": {
+        "prepare": "ng-packagr -p ng-package.json"
     }
 }
